--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						dashboards covering revenue analysis, goal scoring trends, player performance, and predictive
 						forecasting. Features advanced techniques including drill-down capabilities, custom
 						visualizations, DAX calculations, and time-series forecasting.</p>
-					<p>You can check out the source code on my <a href="https://github.com/Or-Monfred/power-bi">GitHub
+					<p>You can check out the source code on my <a href="https://app.powerbi.com/groups/me/reports/7adc2d53-fe36-4d5c-8494-7c7d28c5f640/3f7dfb9e02160ec5a47b?ctid=1ba763f0-9857-4f46-a630-aa9891234bb5&experience=power-bi">GitHub
 							repository</a>.</p>
 				</section>
 			</article>
